--- a/static/css/style.css
+++ b/static/css/style.css
@@ -561,7 +561,7 @@ header .logo img {
 	width:100%;
 	min-height:170px;
 	margin-top:0;
-	background:url("static/images/backgrounds/header.png") no-repeat scroll center bottom,linear-gradient(-45deg, #673c8e, #236295, #9869ff) repeat scroll 0 0 rgba(0, 0, 0, 0);
+	background:#ce5f28;
 	background-size:cover;
 	/*if ie9 */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#673c8e', endColorstr='#9869ff',GradientType=1 ); /* IE6-8 fallback on horizontal gradient */	
