--- a/static/css/style.css
+++ b/static/css/style.css
@@ -248,7 +248,7 @@ body.boxed .wrapper {
 	position: fixed;
 	bottom: 2em;
 	right: 10px;
-	background-color: #3d3d3d;
+	background-color: #0f0f0f;
 	font-size: 12px;
 	display: none;
 	width:40px;
@@ -2022,7 +2022,7 @@ footer .widget_recent_post li a span {
 	background-color:#dd5e2b;
 	}	
 .light-foot .copyright {
-	background:#3d3d3d;
+	background:#0f0f0f;
 	color:#f2f2f2;
 	}
 .light-foot .copyright > div a {
