change color botom

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -248,7 +248,7 @@ body.boxed .wrapper {
 	position: fixed;
 	bottom: 2em;
 	right: 10px;
-	background-color: #0f0f0f;
+	background-color: #3d3d3d;
 	font-size: 12px;
 	display: none;
 	width:40px;
